--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 
 		<!-- angular-related -->
 		<script src="dist/angular.min.js"></script>
-		<script src="lib/node_modules/angular-route/angular-route.min.js"></script>
-		<script src="lib/node_modules/angular-sanitize/angular-sanitize.js"></script>
+		<script src="dist/angular-route.min.js"></script>
+		<script src="dist/angular-sanitize.min.js"></script>
 
 		<!-- firebase-related -->
-		<script src="lib/node_modules/firebase/firebase.js"></script>
+		<script src="dist/firebase.js"></script>
 
 		<!-- audio related -->
-		<script src="lib/node_modules/recorderjs/recorder.js"></script>
-		<script src="lib/node_modules/recorderjs/recorderWorker.js"></script>
+		<script src="dist/recorder.js"></script>
+		<script src="dist/recorderWorker.js"></script>
 
 	<!-- custom scripts -->
 		<script type="text/javascript" src="app/app.js"></script>
