--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- SCRIPTS -->
 
 	<!-- externally produced modules/libraries -->
-		<script src="dist/jquery.min.js"></script>
+		<script src="../dist/jquery.min.js"></script>
 		<script src="dist/js/bootstrap.min.js"></script>
 
 		<!-- angular-related -->
